--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
     <h1> All about me</h1>
     <p> Hello, my name is eric. <br>  I like playing games such as roblox, fortnite, minecraft, and other random games I find.</p>
     <!-- very awesome comment:-->
+
+
+
+    <h2>Class schedules in order</h2>
+    <p>1. Science/Marine Biology<br>2. Algebra II/3x<br>3. Spanish III/5<br>4. DC Software Development<br>5.DC Website and Database Development<br>6. DC Us History<br>7. DC Composition<br> 8. Advisory</p>
+    <h3>Favorite Colors In Order</h3>
+    <p>1. Black<br>2. White<br>3. Pink</p>
 </body>
 </html>
