--- a/index.html
+++ b/index.html
@@ -12,8 +12,23 @@
 
 
     <h2>Class schedules in order</h2>
-    <p>1. Science/Marine Biology<br>2. Algebra II/3x<br>3. Spanish III/5<br>4. DC Software Development<br>5.DC Website and Database Development<br>6. DC Us History<br>7. DC Composition<br> 8. Advisory</p>
+    <ol>
+        <li>Science/Marine Biology</li>
+        <li>Algebra II/3x</li>
+        <li>Spanish III/5</li>
+        <li>DC Software Development</li>
+        <li>DC Website and Database Development</li>
+        <li>DC Us History</li>
+        <li>DC Composition</li>
+        <li>Advisory</li>
+    </ol>
+
     <h3>Favorite Colors In Order</h3>
-    <p>1. Black<br>2. White<br>3. Pink</p>
+
+    <ul>
+        <li>Black</li>
+        <li>White</li>
+        <li>Pink</li>
+    </ul>
 </body>
 </html>
