--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h2>Class schedules in order</h2>
     <ol>
         <li>Science/Marine Biology</li>
-        <li>Algebra II/3x</li>
-        <li>Spanish III/5</li>
+        <li><em>Algebra II/3x</em></li>
+        <li><strong>Spanish III/5</strong></li>
         <li>DC Software Development</li>
         <li>DC Website and Database Development</li>
         <li>DC Us History</li>
@@ -30,5 +30,20 @@
         <li>White</li>
         <li>Pink</li>
     </ul>
+
+    <p>
+        My Favorite Link:
+        <a href="https://trenchdog.bandcamp.com/track/its-nothing">all of the music I listen to is on this site
+        </a>
+
+    </p>
+
+    <p>
+        My Quote;
+        <q cite="https://www.goodreads.com/quotes">
+            Be yourself, everyone else is already taken.
+        </q>
+    </p>
+
 </body>
 </html>
