--- a/index.html
+++ b/index.html
@@ -31,19 +31,7 @@
         <li>Pink</li>
     </ul>
 
-    <p>
-        My Favorite Link:
-        <a href="https://trenchdog.bandcamp.com/track/its-nothing">all of the music I listen to is on this site
-        </a>
-
-    </p>
-
-    <p>
-        My Quote;
-        <q cite="https://www.goodreads.com/quotes">
-            Be yourself, everyone else is already taken.
-        </q>
-    </p>
+    <a href="anotherFolder/Second.html">Second Page</a>
 
 </body>
 </html>
