--- a/anotherFolder/Second.html
+++ b/anotherFolder/Second.html
@@ -10,7 +10,7 @@
 
     <p>
         My Favorite Link:
-        <a href="https://trenchdog.bandcamp.com/track/its-nothing">all of the music I listen to is on this site
+        <a href="https://trenchdog.bandcamp.com/track/its-nothing"> 4ll of the music I listen to is on this site
         </a>
 
     </p>
@@ -21,6 +21,47 @@
             Be yourself, everyone else is already taken.
         </q>
     </p>
+
+    <video controls>
+        <source src="flower.webm" type="video/webm" />
+    </video>
+
+    <p class="button">
+        <button type="submit">Press press press</button>
+
+        <label for="email"></label>
+        <input type="email" id="email" name="email" multiple />
+    </p>
+
+    <fieldset>
+        <legend>Select an artist:</legend>
+
+        <div>
+            <input type="radio" id="quinn" name="person" value="quinn" checked />
+            <label for="quinn">quinn</label>
+        </div>
+
+        <div>
+            <input type="radio" id="rab" name="person" value="rab" />
+            <label for="rab">rab</label>
+        </div>
+
+        <div>
+            <input type="radio" id="summrs" name="person" value="summrs" />
+            <label for="summrs">summrs</label>
+        </div>
+    </fieldset>
+
+    <form>
+        <p>
+        <input type="checkbox" id="thing_1" name="burger" value="burger" />
+            <label for="thing_1"> I like burgers</label>
+        </p>
+        <p>
+            <input type="checkbox" id="thing_2" name="fries" value="fries" />
+            <label for="thing_2"> I like fries</label>
+        </p>
+    </form>
 
 </body>
 </html>
