--- a/anotherFolder/Second.html
+++ b/anotherFolder/Second.html
@@ -22,46 +22,80 @@
         </q>
     </p>
 
-    <video controls>
-        <source src="flower.webm" type="video/webm" />
+    <video
+            controls
+            width="400"
+            height="400"
+
+    >
+
+        <source src="flower.webm" type="video/webm"/>
     </video>
 
     <p class="button">
         <button type="submit">Press press press</button>
 
         <label for="email"></label>
-        <input type="email" id="email" name="email" multiple />
+        <input type="email" id="email" name="email" multiple/>
     </p>
 
     <fieldset>
         <legend>Select an artist:</legend>
 
         <div>
-            <input type="radio" id="quinn" name="person" value="quinn" checked />
+            <input type="radio" id="quinn" name="person" value="quinn" checked/>
             <label for="quinn">quinn</label>
         </div>
 
         <div>
-            <input type="radio" id="rab" name="person" value="rab" />
+            <input type="radio" id="rab" name="person" value="rab"/>
             <label for="rab">rab</label>
         </div>
 
         <div>
-            <input type="radio" id="summrs" name="person" value="summrs" />
+            <input type="radio" id="summrs" name="person" value="summrs"/>
             <label for="summrs">summrs</label>
         </div>
     </fieldset>
 
     <form>
         <p>
-        <input type="checkbox" id="thing_1" name="burger" value="burger" />
+            <input type="checkbox" id="thing_1" name="burger" value="burger"/>
             <label for="thing_1"> I like burgers</label>
         </p>
         <p>
-            <input type="checkbox" id="thing_2" name="fries" value="fries" />
+            <input type="checkbox" id="thing_2" name="fries" value="fries"/>
             <label for="thing_2"> I like fries</label>
         </p>
     </form>
+
+
+    <link rel="stylesheet" href="styles.css">
+    <table>
+        <caption>Movies Ranking</caption>
+        <th>Ranking</th>
+        <th>Movie</th>
+        <th>Director</th>
+        <tr>
+            <td>1.</td>
+            <td>Donnie Darko</td>
+            <td>...Directed by Richard Kelly</td>
+        </tr>
+        <tr>
+            <td>2.</td>
+            <td>Haunted House 2</td>
+            <td>...Directed by Michael Tiddes</td>
+        </tr>
+        <tr>
+            <td>3.</td>
+            <td>A silent voice</td>
+            <td>...Directed by Naoko Yamada</td>
+
+        </tr>
+
+
+    </table>
+
 
 </body>
 </html>
