--- a/anotherFolder/Second.html
+++ b/anotherFolder/Second.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Second Page</title>
+    <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
-
     <a href="../index.html">Go back to the first page</a>
 
     <p>
