--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8"/>
     <title>My First Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <h1> All about me</h1>
     <p> Hello, my name is eric. <br>  I like playing games such as roblox, fortnite, minecraft, and other random games I find.</p>
     <!-- very awesome comment:-->
