Added id and classes

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 <body>
 
     <h1> All about me</h1>
-    <p> Hello, my name is eric. <br>  I like playing games such as roblox, fortnite, minecraft, and other random games I find.</p>
+    <p class="main-text">  Hello, my name is eric.
+        <br>  I like playing games such as roblox, fortnite, minecraft, and other random games I find.</p>
     <!-- very awesome comment:-->
 
 
 
-    <h2>Class schedules in order</h2>
+    <h2 id="schedule">Class schedules in order</h2>
     <ol>
         <li>Science/Marine Biology</li>
         <li><em>Algebra II/3x</em></li>
