--- a/anotherFolder/Second.html
+++ b/anotherFolder/Second.html
@@ -8,14 +8,14 @@
 <body>
     <a href="../index.html">Go back to the first page</a>
 
-    <p>
+    <p class="main-text">>
         My Favorite Link:
         <a href="https://trenchdog.bandcamp.com/track/its-nothing"> 4ll of the music I listen to is on this site
         </a>
 
     </p>
 
-    <p>
+    <p class="main-text">>
         My Quote;
         <q cite="https://www.goodreads.com/quotes">
             Be yourself, everyone else is already taken.
