--- a/anotherFolder/Second.html
+++ b/anotherFolder/Second.html
@@ -10,7 +10,7 @@
 
     <p class="main-text">>
         My Favorite Link:
-        <a href="https://trenchdog.bandcamp.com/track/its-nothing"> 4ll of the music I listen to is on this site
+        <a href="https://trenchdog.bandcamp.com/track/its-nothing"> 4 all of the music I listen to is on this site
         </a>
 
     </p>
