--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
 
     <h1> All about me</h1>
-    <p class="main-text">  Hello, my name is eric.
+    <p id="second" class="main-text">  Hello, my name is eric.
         <br>  I like playing games such as roblox, fortnite, minecraft, and other random games I find.</p>
     <!-- very awesome comment:-->
 
 
 
-    <h2 id="schedule">Class schedules in order</h2>
+    <h2 class="cool" id="schedule">Class schedules in order</h2>
     <ol>
         <li>Science/Marine Biology</li>
         <li><em>Algebra II/3x</em></li>
@@ -26,7 +26,7 @@
         <li>Advisory</li>
     </ol>
 
-    <h3>Favorite Colors In Order</h3>
+    <h3 id="first" class="dark">Favorite Colors In Order</h3>
 
     <ul>
         <li>Black</li>
