--- a/FirstFolder/index.html
+++ b/FirstFolder/index.html
@@ -34,7 +34,7 @@
         <li>Pink</li>
     </ul>
 
-    <a href="anotherFolder/Second.html">Second Page</a>
+    <a class="centered" href="../SecondFolder/Second.html">Second Page</a>
 
 </body>
 </html>
