--- a/SecondFolder/Second.html
+++ b/SecondFolder/Second.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
-    <a href="../index.html">Go back to the first page</a>
+    <a href="../FirstFolder/index.html">Go back to the first page</a>
 
     <p class="main-text">>
         My Favorite Link:
@@ -96,6 +96,7 @@
 
     </table>
 
+    <a href="../ThirdFolder/index.html">Third Page</a>
 
 </body>
 </html>
